tenzir/bats/data/reference/every/test_every_errors/step_04.ref
error: could not parse data
 --> <input>:1:7
  |
1 | every version
  |       ^ 
  |